--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^0.8.7",
     "bluebird": "^3.4.1",
     "body-parser": "~1.15.1",
+    "bower": "^1.7.9",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
