--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "~4.13.4",
     "express-messages": "^1.0.1",
     "mocha": "^3.0.0",
+    "moment": "^2.14.1",
+    "moment-timezone": "^0.5.5",
     "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
