--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "dotenv": "^2.0.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
+    "express-json-csv": "0.0.3",
     "express-messages": "^1.0.1",
     "mocha": "^3.0.0",
     "mongoose": "^4.5.8",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "supertest": "^2.0.0"
   }
