--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "toastr": "^2.1.3",
     "angular-chosen": "*",
     "chosen": "^1.6.1",
-    "vex": "^2.3.4"
+    "vex": "^2.3.4",
+    "normalize-strings": "normalize#^1.1.0"
   },
   "resolutions": {
     "angular": "^1.5.5"
