--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha"
   },
   "dependencies": {
+    "async": "^2.0.1",
     "bcrypt": "^0.8.7",
     "bluebird": "^3.4.1",
     "body-parser": "~1.15.1",
